# tesis

./: test.launch
Gazebo/mybot_ws/: frames.gv  run_cmd.sh  run_teleop.sh
Gazebo/mybot_ws/devel/: .catkin  _setup_util.py  env.sh  setup.bash  setup.sh  setup.zsh
Gazebo/mybot_ws/devel/.private/catkin_tools_prebuild/: .catkin  .rosinstall  setup.sh
Gazebo/mybot_ws/devel/.private/mybot_control/: .catkin  .rosinstall  setup.sh
Gazebo/mybot_ws/devel/.private/mybot_description/: .catkin  .rosinstall  setup.sh
Gazebo/mybot_ws/devel/.private/mybot_gazebo/: .catkin  .rosinstall  setup.sh
Gazebo/mybot_ws/devel/.private/mybot_teleop/: .catkin  .rosinstall  setup.sh
Gazebo/mybot_ws/devel/lib/pkgconfig/: catkin_tools_prebuild.pc  mybot_control.pc  mybot_description.pc  mybot_gazebo.pc  mybot_teleop.pc
Gazebo/mybot_ws/src/mybot_description/: package.xml
Gazebo/mybot_ws/src/mybot_description/launch/: mybot_rviz.launch
Gazebo/mybot_ws/src/mybot_description/urdf/: mybot.gazebo  mybot.xacro  mybot_out.urdf
Gazebo/mybot_ws/src/mybot_teleop/: CMakeLists.txt
Gazebo/mybot_ws/src/mybot_teleop/include/: mybot_key_teleop.py  mybot_teleop.py
Gazebo/mybot_ws/src/mybot_teleop/launch/: mybot_teleop.launch
carro/: package.xml
futbol_robot/: CMakeLists.txt  package.xml
futbol_robot/src/move_robot/: CMakeLists.txt  move.py  package.xml
tesis_fut_robot/: CMakeLists.txt  package.xml
tesis_fut_robot/robot/launch/: robot_config.launch  slam.launch
tesis_fut_robot/robot/param/: read me 
tesis_fut_robot/robot/scripts/: base.py
(+20 files in other folders)
